--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.3.3",
+    "firebase": "^10.1.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
