--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.3.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "firebase": "^10.1.0",
     "next": "13.4.12",
     "react": "18.2.0",
